Fix "font with `code` attribute too small in headline on mobile" flaw

--- a/src/crate/theme/rtd/crate/static/css/custom.css
+++ b/src/crate/theme/rtd/crate/static/css/custom.css
@@ -718,7 +718,6 @@ body .mm-menu .navbar-nav {
     font-size: 14px;
   }
 
-  code,
   kbd,
   pre,
   samp {
